# ticli

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: publish.yml
src/: README.md  pyproject.toml  setup.py
src/ticli/: cli.py  player.py
src/ticli/tests/: test_full_e2e.py
src/ticli/utils/: __init__.py
tidal-source/agent-harness/: pyproject.toml  setup.py
tidal-source/agent-harness/ticli/tidal/: __init__.py  headless_player.py  tidal_cli.py
tidal-source/agent-harness/ticli/tidal/tests/: test_full_e2e.py
tidal-source/agent-harness/ticli/tidal/utils/: credential_store.py
